myStyles.css : added .blackBorder:focus, .redBorder:focus  subclasses , to make sure focus style will work . ref: https://stackoverflow.com/questions/39741709/css-focus-not-working

--- a/BlazorServerApp1/wwwroot/css/myStyles.css
+++ b/BlazorServerApp1/wwwroot/css/myStyles.css
@@ -243,7 +243,8 @@ a {
     outline: none;
 }
 
-input:focus, select:focus, .inputstyle:focus {
+    /*  ref: https://stackoverflow.com/questions/39741709/css-focus-not-working */
+input:focus, select:focus, .inputstyle:focus, .blackBorder:focus, .redBorder:focus {
     border: 3px solid blue;
 }
 
